# youtube-sentiment-analysis

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.dvc/: config
docs/: Makefile  conf.py  index.rst  make.bat
