[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "nihal-das-cv",email = "nihaldasofficial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
